# rusty-ship

./: .gitignore  Cargo.toml  README.md  build.rs  main_old.rs
client/: index.html  index.mjs  main.js
self_signed_certs/: cert.pem  key.pem
src/: main.rs
src/proto/: battleship.proto
src/services/: battleship.rs
