[package]
name = "rusty-ship"
version = "0.1.0"
edition = "2021"
authors = ["Axel Olsson <olsson.axel@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
axum = { version = "0.6.10", features = ["ws", "headers"] }
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.26"
env_logger = "0.10.0"
log = "0.4.17"
anyhow = "1.0.70"
tower = {version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
