[package]
name = "rusty-ship"
version = "0.1.0"
edition = "2021"
authors = ["Axel Olsson <olsson.axel@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["full"] }
tonic = "0.8.3"
tonic-web = "0.5.0"


[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "battleship-server"
path = "src/main.rs"
